--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
@@ -45,24 +45,29 @@
 	</div>
 	<div ng-show="AreaUnderZipcode.length > 0 && showAreaUnderZipcode" style="margin:0px;" class="row">
 		<div style="margin:10px auto;" class="col-md-12">
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="10%">Serial #</td>
-						<td width="40%">Area</td>
-						<td width="25%">Availability</td>
-						<td width="25%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="available in delivery_available">
-						<td>{{$index + 1}}</td>
-						<td>{{available.coverage.area}}</td>
-						<td><input type="checkbox" checklist-model="delivery.available" checklist-value="available.coverage.area"></td>
-						<td><input style="width:80%" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="available.value" /></td>
-					</tr>
-				</tbody>				
-			</table>
+			<form class="css-form" name="form.deliveryChargeForm" novalidate>
+				<p><small style="color:red;" ng-show="(deliveryChargeError && form.deliveryChargeForm.submitted)">*Please enter delivery charge in digits only!</small></p>
+				<table class="table table-striped table-condensed">
+					<thead>
+						<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
+							<td width="10%">Serial #</td>
+							<td width="40%">Area</td>
+							<td width="25%">Availability</td>
+							<td width="25%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="available in delivery_available">
+							<td>{{$index + 1}}</td>
+							<td>{{available.coverage.area}}</td>
+							<td><input type="checkbox" checklist-model="delivery.available" checklist-value="available.coverage.area"></td>
+							<td>
+								<input style="width:80%" name="value" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="available.value" required/>
+							</td>
+						</tr>
+					</tbody>				
+				</table>
+			</form>
 			<div style="margin:0px;" class="row">
 				<div class="col-md-9"></div>
 				<div style="padding:2px;" class="col-md-3">
