--- a/src/app/ProviderWall/ManageUserGroup/views/oz.providerContent.userGroup.tpl.html
+++ b/src/app/ProviderWall/ManageUserGroup/views/oz.providerContent.userGroup.tpl.html
@@ -25,7 +25,7 @@
 
     <div ng-if = 'manageMembers === 1'>
       <div>
-        <button style="margin-bottom:10px; float:right;" class = 'btn btn-info btn-sm' style = 'float : right; '  ng-click="openAddGroup()" >Add new group </button>
+        <button style="margin-bottom:10px; float:right;" class = 'btn btn-info btn-sm' style = 'float : right; '  ng-click="openAddGroup()" >Add New User Group </button>
       </div>
 
         <div collapse="isCollapsed">
@@ -61,7 +61,7 @@
        </div>
     
     <div>
-        <table class = 'table '>
+        <table class = 'table ' ng-if = 'allGrpContents.length !== 0'>
             <tr style="border: 1px solid #EEE8E8; ">
                 <th style = "width : 15%">Group Name</th>
                 <th style = "width : 35%">Group Description</th>
@@ -104,7 +104,7 @@
      
         </table>
         <div style="padding: 10px;" ng-if = 'allGrpContents.length === 0'>
-          <div style="padding:40px; opacity: .8;margin-top: 2px;margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px; margin:0px;" class="row">
+          <div style="padding:40px; opacity: .8;margin-top: 2px;margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px; margin:0px; margin-top :28px" class="row">
             <div class="col-md-12">
               <div class="no-message">
                 <center>
