--- a/src/app/ProviderWall/ManageUserGroup/views/oz.providerContent.userGroup.tpl.html
+++ b/src/app/ProviderWall/ManageUserGroup/views/oz.providerContent.userGroup.tpl.html
@@ -141,12 +141,12 @@
                  <tr ng-repeat="userinvite in userinvites">
 
                       <td width="45%">
-                              <input class="form-control" ng-model="userinvite.email" type="text" name="name" placeholder="Please enter email id" >
+                              <input class="form-control" ng-model="userinvite.email" type="text" name="name" placeholder="Please enter email id  [ example@gmail.com]" >
                                <p ng-show="array[$index].email === 1" class="text-danger"><small>Please check this email id</small></p>
                       </td>
 
                       <td width="45%">
-                              <input class="form-control" ng-model="userinvite.mobileno" name="text" type="text" placeholder="Please enter mobile no " >
+                              <input class="form-control" ng-model="userinvite.mobileno" name="text" type="text" placeholder="Please enter mobile no [9XXXXXXXXX]" >
                                <p ng-show="array[$index].mobileno === 1" class="text-danger"><small>Please check this mobile number</small></p>
                       </td>
 
